--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
-
+  <link rel="stylesheet" href="./css/responsive.css" class="">
 </HEAD>
 
 
@@ -30,6 +30,11 @@
     <span class=" animation3 mess">𝖄𝖊̂𝖚 𝕹𝖌𝖆</span>
     <span class=" animation3 mess1">❤❤</span>
   </div>
+  <audio autoplay>
+    <source src="./đã cắt.mp3" type="audio/ogg">
+    <source src="./đã cắt.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
