--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<title>Yêu Nga ❤️❤️❤️</title>
+<title>DucAnhIsMe</title>
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="theme-color" content="#000000" />
-<meta name="description" content="Yêu Nga Mãi Mãi ❤️❤️❤️" />
+<meta name="description" content="DucAnhIsMe" />
 <link rel="icon" href="./image/logo.svg" class="">
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -27,8 +27,8 @@
 
   <canvas id="pinkboard" class="animation"></canvas>
   <div class="text">
-    <span class=" animation3 mess">𝖄ê𝖚 𝕹𝖌𝖆</span>
-    <span class=" animation3 mess1">❤❤</span>
+    <span class=" animation3 mess">𝕿𝖍𝖎𝖊̂𝖓 𝖙𝖍𝖆̂̀𝖓 𝖓𝖌𝖚̉ 𝖓𝖌𝖔𝖓</span>
+    <span class=" animation3 mess1"></span>
   </div>
   <audio autoplay class="audio">
     <source src="./đã cắt.mp3" type="audio/ogg">
