--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <canvas id="pinkboard" class="animation"></canvas>
   <div class="text">
-    <span class=" animation3 mess">𝕿𝖍𝖎𝖊̂𝖓 𝖙𝖍𝖆̂̀𝖓 𝖓𝖌𝖚̉ 𝖓𝖌𝖔𝖓</span>
-    <span class=" animation3 mess1"></span>
+    <span class=" animation3 mess">𝖄ê𝖚 𝕹𝖌𝖆 </span>
+    <span class=" animation3 mess1">❤❤</span>
   </div>
   <audio autoplay class="audio">
     <source src="./đã cắt.mp3" type="audio/ogg">
