--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<title>DucAnhIsMe</title>
+<title>𝖄ê𝖚 𝕹𝖌𝖆 ❤❤</title>
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="theme-color" content="#000000" />
-<meta name="description" content="DucAnhIsMe" />
+<meta name="description" content="𝖄ê𝖚 𝕹𝖌𝖆 ❤❤" />
 <link rel="icon" href="./image/logo.svg" class="">
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
